# ChangeLog for media-gfx/fotoxx
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Mar 2009; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-6.1.ebuild:
  Removed fotoxx-6.1 as the package has changed. Will be readded once a
  "stable" version is released.

  02 Mar 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
  fotoxx-6.1.ebuild:
  moved S definition above src_unpack and use it there too

  26 Feb 2009; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-6.1.ebuild:
  Version bumb for Fotoxx. Keeping previous version as this is beta.

  25 Feb 2009; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.10.4.ebuild, +fotoxx-5.10.5.ebuild:
  Version bumb for Fotoxx.

  13 Feb 2009; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-5.9.ebuild,
  +fotoxx-5.10.4.ebuild:
  Version bumb for Fotoxx.

  22 Jan 2009; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-5.8.ebuild,
  +fotoxx-5.9.ebuild:
  Version bumb for Fotoxx

  05 Jan 2009; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.7.2.ebuild:
  Version bumb for fotoxx.

  26 Dec 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  fotoxx-5.7.2.ebuild:
  Updating download path as it has changed

  26 Dec 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-5.8.ebuild:
  Version bumb for Fotoxx. Keeping previous version as this is unstable.

  21 Dec 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.7.1.ebuild, +fotoxx-5.7.2.ebuild:
  Version bumb for Fotoxx.

  04 Dec 2008; Robert Steen (Gandalf) <gandalf@vebbe.se>
  -fotoxx-5.6.1.ebuild, -fotoxx-5.7.ebuild, +fotoxx-5.7.1.ebuild:
  Version bumb for Fotoxx.

  27 Nov 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> +fotoxx-5.7.ebuild:
  Version bumb for Fotoxx. Keeping previous version as code is experimental

  19 Nov 2008; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-5.5.ebuild,
  -fotoxx-5.6.ebuild, +fotoxx-5.6.1.ebuild:
  Version bumb for Fotoxx.
