@@ -1,4 +1,4 @@
-DIST fotoxx-5.10.5.tar.gz 947807 RMD160 447f2837d4cd7ba10d5676f317fda38513134935 SHA1 d8699081f6f179404fc1eab2789d3c1142ce7bf1 SHA256 2f57af622c7a1d4545e0de447228164b7a2612263db22d250b0b12fb1d9a08c5
-EBUILD fotoxx-5.10.5.ebuild 759 RMD160 0ba9102a51833042031cb0bca5be9284189438a9 SHA1 d95d85c9e4deb07234a765ea9e49154dd0c9cf8e SHA256 0324e39e9f95a86bcd96842a4d94c778085b88d686a08b9058481c83be88c0b5
-MISC ChangeLog 3185 RMD160 6068e03d042a053127f8fb01a281a43e24bc37b1 SHA1 ae08696b42dac018b5e1a102fe0faf4d6e1f1b12 SHA256 bed5573472673892a6e5d20ac0bb9c666e0da38b15ae23dfd90a651324f10089
+DIST fotoxx-6.4.2.tar.gz 407636 RMD160 3e0519f02951c24d00fc4adbd43833975d055558 SHA1 201e9980b3eb2ede6ccddc72d52613dd362b3546 SHA256 6fee5c5ea0bce7ea97d1fb1778b75f3eeb57b3cc030f1dd0d6de9619e208205a
+EBUILD fotoxx-6.4.2.ebuild 796 RMD160 40114e451e35c9a2671fc9a1dabaf771edef6b63 SHA1 74bf5139ff1a7184a8ab5662b472364df0300874 SHA256 9057353b2d04331b30892b81c1601d22a55b8c8ecaf59bb634d8f8f394e2bef9
+MISC ChangeLog 3317 RMD160 2a9ac6a273333dba21ede75f22f431685eeebffe SHA1 b6df7dcbd3165a7a27a61c90fd6e36147830a440 SHA256 e4d9343a5a5318b267a5024708f75b28c864a858084e2afed17fa20c18cf491c
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
