@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Apr 2009; Robert Steen (Gandalf) <gandalf@vebbe.se>
+  -fotoxx-5.10.5.ebuild, +fotoxx-6.4.2.ebuild:
+  Version bumb for Fotoxx.
+
   02 Mar 2009; Robert Steen (Gandalf) <gandalf@vebbe.se> -fotoxx-6.1.ebuild:
   Removed fotoxx-6.1 as the package has changed. Will be readded once a
   "stable" version is released.
